# Whispr

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  MODEL_INTEGRATION.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  test_pipeline.py
.github/workflows/: c-extensions-build.yml  changelog-checker.yml  cmake-multi-platform.yml  codeql-analysis.yml  docker-build.yml  integration-test.yml  python-lint.yml  python-tests.yml  update-changelog.yml
data/training/annotations/: voxconverse_sample1.rttm  voxconverse_sample2.rttm
data/training/multi_speaker/: librispeech_sample.flac
data/training/spatial_info/: chime6_sample_locations.json
models/: README.md  feature_params.json
scripts/: README.md  prepare_training_data.py  train_asteroid.py  train_localization.py
tests/: __init__.py  test_c_extensions.py
whispr/: README.md  __init__.py  config.py  localization.py  pipeline.py
whispr/c_ext/: README.md  __init__.py  build_extensions.sh  pyproject.toml  setup.cfg  setup.py  simple_test.py  test_extensions.py
whispr/c_ext/src/: features.c  framing.c  separation.c  vad.c
whispr/dsp/: README.md  __init__.py  features.py  framing.py  spatial.py
whispr/io/: README.md  __init__.py  loader.py  writer.py
whispr/ml/: README.md  __init__.py  clustering.py  separation.py  vad.py
whispr/ui/: README.md  __init__.py  app.py
whispr/ui/assets/: style.css
