[build-system]
requires = ["setuptools>=42", "wheel", "numpy>=1.20.0"]
build-backend = "setuptools.build_meta"

[project]
name = "whispr"
version = "0.1.0"
description = "A tool for speech analysis in audio recordings"
readme = "README.md"
authors = [
    {name = "Daniel Ostrow", email = "daniel@example.com"}
]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["whispr"]

[tool.black]
line-length = 88 